Trying to make it build from a container

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ if (EMSCRIPTEN)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_SDL=2 -s USE_SDL_MIXER=2 --use-preload-plugins --preload-file YodaDemo.dta")
 else(EMSCRIPTEN)
     find_package(SDL2 REQUIRED)
-    include_directories(${SDL2_INCLUDE_DIR})
+    include_directories(${SDL2_INCLUDE_DIR}/..)
     find_package(SDL2_mixer REQUIRED)
-    include_directories(${SDLMIXER_INCLUDE_DIR})
+    include_directories(${SDLMIXER_INCLUDE_DIR}/..)
     add_definitions(-DDAT_IN_RAM)
 endif(EMSCRIPTEN)
 
